# DEMO_Modern

./: .gitignore  CMakeLists.txt  CMakeLists_wasm.cmake  README.md
DEMO/: CMakeLists.txt  main.cpp  main_wasm.cpp
EYES/: CMakeLists.txt  eyes.cpp
SHOW/: CMakeLists.txt  Diagram.cpp  Diagram.hpp  Ecosys.cpp  Ecosys.hpp  Eyes.cpp  Eyes.hpp  Geograph.cpp  Geograph.hpp  Geograph_presets.hpp  GraphView.cpp  GraphView.hpp  Gwb.cpp  Gwb.hpp  Henon.cpp  Henon.hpp  Jout.cpp  Jout.hpp  Julia.cpp  Julia.hpp  Lorenz.cpp  Lorenz.hpp  Lsys.cpp  Lsys.hpp  Mandelbrot.cpp  Mandelbrot.hpp  May.cpp  May.hpp  Newton.cpp  Newton.hpp  Pfrac.cpp  Pfrac.hpp  Trammel.cpp  Trammel.hpp
SHOW/GWB/: gwb.h  gwb_3d.c  gwb_3d.h  gwb_adv.c  gwb_bool.c  gwb_core.c  gwb_euler.c  gwb_geo.c  gwb_mat.c  gwb_mat.h  gwb_shgwb.c  gwb_split.c  gwb_trans.c  gwb_undo.c
SRCPOOL/: CMakeLists.txt  IPlugin.hpp  ZoomSelector.hpp
build_wasm/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  demo.html  demo.js  demo.wasm  serve.py
web/: shell.html
